Fixed modal pop up focus errors and element focus visibility on click

--- a/_sass/pages/_shared.scss
+++ b/_sass/pages/_shared.scss
@@ -323,6 +323,7 @@ footer {
     }
   }
 }
- *:hover, *:active {
-    outline: none;
-  }    
+
+[data-whatintent='mouse'] *:focus {
+  outline: none;
+}
